--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @media (max-width: 767px) {
+    padding: 20px 15px;
+  }
 }
 
 code {
