--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -8,8 +8,10 @@
   align-items: center;
 
   .image-container {
-    width: 23%;
+    width: 20%;
+    min-width: 100px;
     padding-right: 15px;
+   
 
     img {
       width: 100%;
@@ -19,7 +21,8 @@
   .name,
   .quantity,
   .price {
-    width: 23%;
+    width: 20%;
+    min-width: 100px;
   }
 
   .quantity {
