--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -5,11 +5,12 @@
   height: 220px;
   align-items: center;
   position: relative;
+  margin-bottom: 30px;
   
 
   img {
     width: 100%;
-    height: 100%;
+    height: 95%;
     object-fit: cover;
     object-position: center;
     margin-bottom: 5px;
@@ -40,7 +41,10 @@
     display: flex;
     justify-content: space-between;
     font-size: 18px;
-
-   
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    padding-top: 15px;
   }
+
 }
