--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -1,31 +1,59 @@
 .checkout-container {
-  width: 55%;
-  min-height: 90vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 50px auto 0;
 
-  .checkout-header {
     width: 100%;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid darkgrey;
+   
 
-    .header-block {
-      text-transform: capitalize;
-      width: 23%;
-
-      &:last-child {
-        width: 8%;
-      }
+    @media (max-width: 991px) {
+        overflow-x: scroll;
     }
-  }
 
-  .total {
-    margin-top: 30px;
-    margin-left: auto;
-    font-size: 36px;
-  }
+    .checkout-wrapper {
+        width: 75%;
+        //min-height: 90vh;
+        min-width: 500px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 50px auto 0;
+
+        @media (max-width: 991px) {
+            width: 100%;
+            margin-top: 20px;
+        }
+
+        .checkout-header {
+            width: 100%;
+            padding: 10px 0;
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 1px solid darkgrey;
+
+            .header-block {
+                text-transform: capitalize;
+                width: 20%;
+                min-width: 100px;
+               
+
+                // &:last-child {
+                //     width: 8%;
+                // }
+
+            }
+
+        }
+
+        .total {
+            margin-top: 30px;
+            margin-left: auto;
+            font-size: 36px;
+
+            @media (max-width: 767px) {
+                display: block;
+                width: 100%;
+                margin-left: 0px;
+                font-size: 20px;
+            }
+        }
+
+    }
 }
