--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -1,12 +1,21 @@
 .category-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 20px;
-  row-gap: 50px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 20px;
+    row-gap: 50px;
+    justify-items: center;
+
+    @media (max-width: 991px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 991px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 .category-title {
-  font-size: 28px;
-  margin-bottom: 25px;
-  text-align: center;
+    font-size: 28px;
+    margin-bottom: 25px;
+    text-align: center;
 }
