--- a/src/routes/product-detail/product-detail.styles.scss
+++ b/src/routes/product-detail/product-detail.styles.scss
@@ -3,6 +3,12 @@
     display: flex;
     justify-content: center;
 
+    @media (max-width: 767px) {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
     .left {
         max-width: 400px;
         margin-right: 15px;
@@ -12,5 +18,18 @@
             object-fit: cover;
             object-position: 'center';
         }
+
+        @media (max-width: 767px) {
+            margin-bottom: 15px;
+        }
     }
+
+    .right {
+        h1 {
+            @media (max-width: 767px) {
+                font-size: 25px;
+            }
+        }
+    }
+
 }
