display discounted price and reviews if there is

--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -19,6 +19,15 @@
     .name {
       font-size: 16px;
     }
+
+    .price {
+      span {
+        margin-left: 5px;
+        strike {
+          margin-right: 4px;
+        }
+      }
+    }
     
   }
 
