--- a/src/routes/product-detail/product-detail.styles.scss
+++ b/src/routes/product-detail/product-detail.styles.scss
@@ -30,6 +30,26 @@
                 font-size: 25px;
             }
         }
+
+        .reviewsContainer {
+            display: flex;
+            flex-direction: column;
+            padding-top: 15px;
+            border-top: 1px solid rgba(0, 0, 0, 0.2);
+            margin-top: 25px;
+          
+            h2 {
+                font-size: 18px;
+                color: navy;
+            }
+
+            ul {
+                margin-top: 0px;
+                padding: 0px;
+                list-style: none;
+            }
+        }
     }
 
 }
+
